# alfs

./: .gitignore  AUTHORS  README.md  autoclean.sh  autogen.sh  config.h  configure.ac
.github/workflows/: ccpp.yml
scripts/: download.sh  environment.sh  lfs-user.sh  partition.sh  tools.sh
src/: Makefile.am  createlfsdirs.h  curlfile.h  lfscli.h  lfsenv.h  lfsuser.h  main.c  partition.h
